# chess-ex1-liornag

./: .gitignore  CMakeLists.txt
.github/workflows/: c-cpp.yml
include/: Bishop.h  Board.h  Chess.h  King.h  Knight.h  Move.h  Pawn.h  Piece.h  PriorityQueue.h  Queen.h  Rook.h  Utils.h
src/: Bishop.cpp  Board.cpp  Chess.cpp  King.cpp  Knight.cpp  Move.cpp  Pawn.cpp  Queen.cpp  Rook.cpp  Utils.cpp  main.cpp
